--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ file.reference.commons-fileupload-1.3.jar=C:\\Users\\Erhan\\Documents\\NetBeansP
 file.reference.commons-io-2.4.jar=C:\\Users\\Erhan\\Documents\\NetBeansProjects\\jars\\commons-io-2.4.jar
 file.reference.log4j-1.2.17.jar=C:\\Users\\Erhan\\Documents\\NetBeansProjects\\jars\\log4j-1.2.17.jar
 file.reference.primefaces-6.0.jar=C:\\Users\\Erhan\\Documents\\NetBeansProjects\\jars\\primefaces-6.0.jar
+file.reference.tika-app-1.14.jar=C:\\Users\\Erhan\\Documents\\NetBeansProjects\\jars\\tika-app-1.14.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -55,7 +56,8 @@ javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.commons-fileupload-1.3.jar}:\
     ${file.reference.all-themes-1.0.10.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.tika-app-1.14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
