--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.all-themes-1.0.10.jar=web/WEB-INF/lib/all-themes-1.0.10.jar
-file.reference.commons-fileupload-1.3.2.jar=web/WEB-INF/lib/commons-fileupload-1.3.2.jar
-file.reference.commons-io-2.5.jar=web/WEB-INF/lib/commons-io-2.5.jar
-file.reference.log4j-1.2.17.jar=web/WEB-INF/lib/log4j-1.2.17.jar
-file.reference.primefaces-6.0.jar=web/WEB-INF/lib/primefaces-6.0.jar
-file.reference.tika-app-1.14.jar=web/WEB-INF/lib/tika-app-1.14.jar
+file.reference.all-themes-1.0.10.jar=../lib/all-themes-1.0.10.jar
+file.reference.commons-fileupload-1.3.2.jar=../lib/commons-fileupload-1.3.2.jar
+file.reference.commons-io-2.5.jar=../lib/commons-io-2.5.jar
+file.reference.log4j-1.2.17.jar=../lib/log4j-1.2.17.jar
+file.reference.primefaces-6.0.jar=../lib/primefaces-6.0.jar
+file.reference.tika-app-1.14.jar=../lib/tika-app-1.14.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -52,11 +52,11 @@ jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.primefaces-6.0.jar}:\
     ${file.reference.all-themes-1.0.10.jar}:\
     ${file.reference.commons-fileupload-1.3.2.jar}:\
     ${file.reference.commons-io-2.5.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.primefaces-6.0.jar}:\
     ${file.reference.tika-app-1.14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
