--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,8 +51,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.all-themes-1.0.10.jar}:\
+    ${libs.MySQLDriver.classpath}:\
     ${file.reference.commons-fileupload-1.3.2.jar}:\
     ${file.reference.commons-io-2.5.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
